--- a/.babelrc
+++ b/.babelrc
@@ -1,7 +1,7 @@
 {
   "plugins": [
     [
-      "module:react-native-dotenv"
+      "module:react-native-dotenv", {"moduleName": "@env"}
     ]
   ]
 }
