--- a/package.json
+++ b/package.json
@@ -13,20 +13,23 @@
     "@apollo/client": "^3.5.8",
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/native-stack": "^6.5.0",
+    "dayjs": "^1.10.7",
+    "dotenv": "^16.0.0",
     "expo": "~44.0.0",
     "expo-status-bar": "~1.2.0",
     "graphql": "^16.3.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
-    "react-native-dotenv": "^3.3.1",
     "react-native-gifted-chat": "^0.16.3",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
     "react-native-web": "0.17.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.12.9",
+    "@babel/preset-env": "^7.16.11",
+    "babel-plugin-inline-dotenv": "^1.6.0"
   },
   "private": true
 }
