--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   },
   "dependencies": {
     "@apollo/client": "^3.5.8",
+    "@expo-google-fonts/poppins": "^0.2.2",
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/native-stack": "^6.5.0",
     "dayjs": "^1.10.7",
     "dotenv": "^16.0.0",
     "expo": "~44.0.0",
+    "expo-font": "~10.0.4",
     "expo-status-bar": "~1.2.0",
     "graphql": "^16.3.0",
     "react": "17.0.1",
