--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dayjs": "^1.10.7",
     "dotenv": "^16.0.0",
     "expo": "~44.0.0",
+    "expo-app-loading": "^1.3.0",
     "expo-font": "~10.0.4",
     "expo-status-bar": "~1.2.0",
     "graphql": "^16.3.0",
